--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <canvas id="canvas"
         width="480"
         height="320"
-        style="background-color: #202020;">
+        style="background-color: #202020;border-radius: 4px; margin: 20px;">
 </canvas>
 <div id="root"></div>
 <!--
